Moved stuff around

--- a/client.html
+++ b/client.html
@@ -1,9 +1,21 @@
 <html>
     <head>
         <title> SDC - Note playe </title>
+        <style type="text/css">
+            #wrapper {
+                width: 900px;
+                height: 600px;
+                margin: 0px auto;
+            }
+        </style>
     </head>
     <body>
-        <h1> Hola SDC! </h1>
+        <div id="wrapper">
+            <canvas width="900" height="650">
+            </canvas>
+        </div>
+        <script type="text/javascript" src="jquery.js"></script>
+        <script type="text/javascript" src="underscore.js"></script>
         <script type="text/javascript" src="client.js"></script>
     </body>
 </html>
